--- a/SettingsView.xaml
+++ b/SettingsView.xaml
@@ -2,7 +2,9 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:obsidianomnisearch="clr-namespace:Flow.Launcher.Plugin.ObsidianOmnisearch" d:DataContext="{d:DesignInstance Type=obsidianomnisearch:Settings}"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:obsidianomnisearch="clr-namespace:Flow.Launcher.Plugin.ObsidianOmnisearch" 
+             d:DataContext="{d:DesignInstance Type=obsidianomnisearch:Settings}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Margin="70,14,0,14">
