--- a/PreviewPanel.xaml
+++ b/PreviewPanel.xaml
@@ -7,6 +7,12 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <TextBlock x:Name="textBlock" Text="*no text*" Foreground="White" FontSize="14" Margin="10,10,10,10"/>
+        <TextBlock 
+            x:Name="textBlock"
+            Text="*no text*"
+            Foreground="{DynamicResource PopupTextColor}"
+            FontSize="14"
+            Margin="10,10,10,10"
+            />
     </Grid>
 </UserControl>
